2014-05-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-op1.boot, src/interp/format.boot: Fix build
	with ecl and gcl.

2014-05-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/include/hterror.H1, src/hyper/hterror.c,
	src/sman/sman.c, src/graph/view3D/stuff3d.c,
	src/clef/edible.c, contrib/emacs/Makefile.in:
	Silence some warnings.

2014-05-01  Raoul Bourquin <raoulb@bluewin.ch>

	* src/algebra/array2.spad.pamphlet,
	src/doc/htex/ug08.htex: More general array indexing.

2014-04-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Fix compilation of 'error'.

2014-04-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeef.spad.pamphlet,
	src/algebra/rderf.spad.pamphlet,
	src/algebra/rdeefx.spad.pamphlet,
	src/algebra/Makefile.in: Improve integration in terms
	of 'Ei' and 'erf'.
	src/input/integ.input: Add tests.
	src/input/fixed.input, src/input/bugs2007.input: Adjust.

2014-04-26  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/doc/htex/ARRAY2.htex, src/doc/htex/VECTOR.htex: fix double
	!! via \spadfunFromX

2014-04-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/gaussian.spad.pamphlet: Fix ComplexPatternMatch.

2014-04-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-output.boot:  Do not crash printing '%'.

2014-04-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot: For ')read' create intermediate
	files in current directory.

2014-04-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot: Allow extra semcolon at end of block.

2014-04-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/tex.spad.pamphlet,
	src/algebra/texmacs.spad.pamphlet,
	src/algebra/mathml.spad.pamphlet,
	src/algebra/html.spad.pamphlet:  Minor cleanup.

2014-04-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-util.boot, src/interp/format.boot,
	src/interp/br-op1.boot: Improve browsing of
	constructors with parameters.
