@@ -1,3 +1,9 @@
+2014-05-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/buildom.boot, src/interp/g-error.boot,
+	src/interp/compiler.boot, src/lisp/primitives.lisp:
+	Nicer error messages.
+
 2014-05-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/br-op1.boot, src/interp/format.boot: Fix build
